Fixed CSS issue: overlapping element - increases the z-index value of class NavContainerZIndex to prevent overlapping elements.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Header.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Header.css
@@ -355,7 +355,7 @@ body.Visible-ScreenXL #ToolBar li.UserAvatar div a:hover {
 }
 
 .NavContainerZIndex{
-    z-index: 5500 !important;
+    z-index: 6101 !important;
 }
 
 #NavigationContainer #Navigation {
